--- a/index.ipynb
+++ b/index.ipynb
@@ -154,7 +154,7 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    return max(restaurant['r'])"
+    "    return max(restaurant['rating'],)"
    ]
   },
   {
