automatically backed up by learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -154,8 +154,8 @@
    "outputs": [],
    "source": [
     "def better_restaurant(restaurant, alternative):\n",
-    "    if \n",
-    "    return max(restaurant['rating'],alternative['rating'])"
+    "    if restaurant['rating']>alternative['rating']\n",
+    "    return "
    ]
   },
   {
