--- a/index.ipynb
+++ b/index.ipynb
@@ -192,8 +192,9 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    \n",
-    "    pass"
+    "    if restaurant['p'] > alternative['rating']:\n",
+    "        return restaurant\n",
+    "    return alternative"
    ]
   },
   {
