--- a/index.ipynb
+++ b/index.ipynb
@@ -192,7 +192,7 @@
    "outputs": [],
    "source": [
     "def cheaper_restaurant(restaurant, alternative):\n",
-    "    if restaurant['p'] > alternative['rating']:\n",
+    "    if restaurant['price'] > lenalternative['price']:\n",
     "        return restaurant\n",
     "    return alternative"
    ]
