--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,8 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    for restaurant in resturants "
+    "    for restaurant in resturants:\n",
+    "        if res"
    ]
   },
   {
