--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in resturants:\n",
-    "        if res"
+    "        if restaurant['is']"
    ]
   },
   {
