--- a/index.ipynb
+++ b/index.ipynb
@@ -287,7 +287,7 @@
    "source": [
     "def open_restaurants(restaurants):\n",
     "    for restaurant in resturants:\n",
-    "        if restaurant['is_closed'] == "
+    "        if restaurant['is_closed'] == False"
    ]
   },
   {
