--- a/index.ipynb
+++ b/index.ipynb
@@ -288,7 +288,7 @@
     "def open_restaurants(restaurants):\n",
     "    for restaurant in resturants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            "
+    "            open_rest"
    ]
   },
   {
