--- a/index.ipynb
+++ b/index.ipynb
@@ -286,7 +286,7 @@
    "outputs": [],
    "source": [
     "def open_restaurants(restaurants):\n",
-    "    open_restauran\n",
+    "    open_restaurants = []\n",
     "    for restaurant in resturants:\n",
     "        if restaurant['is_closed'] == False:\n",
     "            open_restaurants.append(restaurant)"
