--- a/index.ipynb
+++ b/index.ipynb
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -289,7 +289,7 @@
     "    open_rest = []\n",
     "    for restaurant in resturants:\n",
     "        if restaurant['is_closed'] == False:\n",
-    "            open_restaurants.append(restaurant)\n",
+    "            open_rest.append(restaurant)\n",
     "    return open_restaurants"
    ]
   },
